# data_platform

./: .gitignore  README.md  pyproject.toml
data_platform/datalake/: __init__.py  lake.py  storage.py
data_platform/pipelines/: __init__.py  adapters.py  medallion.py
data_platform/utils/: diagnostics.py  quality.py  time_utils.py
